// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HarborServicePricing renders noData message when there is no data 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Satamapalvelut
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Lisähinnat venepaikoille. Hinnat sisältävät alv 24 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width:525px"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display:flex;flex:1 0 auto;min-width:0px"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:225 0 auto;min-width:0px;width:225px;cursor:pointer"
                title="Toggle SortBy"
              >
                Palvelu
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:75 0 auto;min-width:0px;width:75px;cursor:pointer"
                title="Toggle SortBy"
              >
                Hinta
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px;cursor:pointer"
                title="Toggle SortBy"
              >
                Aika
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px"
              >
                Muokkaa
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
              role="row"
            >
              <div
                class="tableCell"
              >
                Ei tietoja
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;

exports[`HarborServicePricing renders normally 1`] = `
<div
  class="card"
>
  <div
    class="cardHeader"
  >
    <span
      class="title"
    >
      Satamapalvelut
    </span>
  </div>
  <div
    class="cardBody"
  >
    <article
      class="section"
    >
      <section
        class="body"
      >
        Lisähinnat venepaikoille. Hinnat sisältävät alv 24 %.
      </section>
    </article>
    <div>
      <div
        class="tableWrapper"
      >
        <div
          class="table basic noMainHeader"
          role="table"
          style="min-width:525px"
        >
          <div
            class="stickyHeaders"
          >
            <div
              class="header"
              role="row"
              style="display:flex;flex:1 0 auto;min-width:0px"
            >
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:225 0 auto;min-width:0px;width:225px;cursor:pointer"
                title="Toggle SortBy"
              >
                Palvelu
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:75 0 auto;min-width:0px;width:75px;cursor:pointer"
                title="Toggle SortBy"
              >
                Hinta
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px;cursor:pointer"
                title="Toggle SortBy"
              >
                Aika
                <div
                  class="sortArrowWrapper"
                >
                  <svg
                    class="Icon-module_icon__1Jtzj icon_hds-icon__1YqNC Icon-module_m__3edUY icon_hds-icon--size-m__1mcHv sortArrow sortArrowDown"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                      <path
                        d="M10 5.636l1.414 1.414L7.465 11H20v2H7.464l3.95 3.95L10 18.364 3.636 12z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="headerCell"
                colspan="1"
                role="columnheader"
                style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px"
              >
                Muokkaa
              </div>
            </div>
          </div>
          <div
            role="rowgroup"
          >
            <div
              class="rowWrapper"
            >
              <div
                role="row"
                style="display:flex;flex:1 0 auto;min-width:0px"
              >
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing:border-box;flex:225 0 auto;min-width:0px;width:225px"
                >
                  Jollapaikka
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing:border-box;flex:75 0 auto;min-width:0px;width:75px"
                >
                  10,00 €
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px"
                >
                  Kausi
                </div>
                <div
                  class="tableCell"
                  role="cell"
                  style="box-sizing:border-box;flex:112.5 0 auto;min-width:0px;width:112.5px"
                >
                  <button>
                    <span
                      class="text brand span"
                    >
                      Muokkaa
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
</div>
`;
